// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Login page renders renders with config value 1`] = `
<EuiListGroup
  className="login-wrapper"
>
  <EuiImage
    alt=""
    size="fullWidth"
    url="http://localhost:5601/images/test.png"
  />
  <EuiSpacer
    size="s"
  />
  <EuiText
    size="m"
    textAlign="center"
  >
    Title1
  </EuiText>
  <EuiSpacer
    size="s"
  />
  <EuiText
    size="s"
    textAlign="center"
  >
    SubTitle1
  </EuiText>
  <EuiSpacer
    size="s"
  />
  <EuiForm
    component="form"
  >
    <EuiFormRow
      describedByIds={Array []}
      display="row"
      fullWidth={false}
      hasChildLabel={true}
      hasEmptyLabelSpace={false}
      labelType="label"
    >
      <EuiFieldText
        data-test-subj="user-name"
        isInvalid={false}
        onChange={[Function]}
        placeholder="Username"
        prepend={
          <EuiIcon
            type="user"
          />
        }
        value=""
      />
    </EuiFormRow>
    <EuiFormRow
      describedByIds={Array []}
      display="row"
      fullWidth={false}
      hasChildLabel={true}
      hasEmptyLabelSpace={false}
      isInvalid={false}
      labelType="label"
    >
      <EuiFieldText
        data-test-subj="password"
        isInvalid={false}
        onChange={[Function]}
        placeholder="Password"
        prepend={
          <EuiIcon
            type="lock"
          />
        }
        type="password"
        value=""
      />
    </EuiFormRow>
    <EuiFormRow
      describedByIds={Array []}
      display="row"
      fullWidth={false}
      hasChildLabel={true}
      hasEmptyLabelSpace={false}
      labelType="label"
    >
      <EuiButton
        className="test-btn-style"
        data-test-subj="submit"
        fill={true}
        onClick={[Function]}
        size="s"
        type="submit"
      >
        Log In
      </EuiButton>
    </EuiFormRow>
  </EuiForm>
</EuiListGroup>
`;

exports[`Login page renders renders with default value 1`] = `
<EuiListGroup
  className="login-wrapper"
>
  <EuiSpacer
    size="s"
  />
  <EuiText
    size="m"
    textAlign="center"
  >
    Please login to Kibana
  </EuiText>
  <EuiSpacer
    size="s"
  />
  <EuiText
    size="s"
    textAlign="center"
  >
    If you have forgotten your username or password, please ask your system administrator
  </EuiText>
  <EuiSpacer
    size="s"
  />
  <EuiForm
    component="form"
  >
    <EuiFormRow
      describedByIds={Array []}
      display="row"
      fullWidth={false}
      hasChildLabel={true}
      hasEmptyLabelSpace={false}
      labelType="label"
    >
      <EuiFieldText
        data-test-subj="user-name"
        isInvalid={false}
        onChange={[Function]}
        placeholder="Username"
        prepend={
          <EuiIcon
            type="user"
          />
        }
        value=""
      />
    </EuiFormRow>
    <EuiFormRow
      describedByIds={Array []}
      display="row"
      fullWidth={false}
      hasChildLabel={true}
      hasEmptyLabelSpace={false}
      isInvalid={false}
      labelType="label"
    >
      <EuiFieldText
        data-test-subj="password"
        isInvalid={false}
        onChange={[Function]}
        placeholder="Password"
        prepend={
          <EuiIcon
            type="lock"
          />
        }
        type="password"
        value=""
      />
    </EuiFormRow>
    <EuiFormRow
      describedByIds={Array []}
      display="row"
      fullWidth={false}
      hasChildLabel={true}
      hasEmptyLabelSpace={false}
      labelType="label"
    >
      <EuiButton
        className="btn-login"
        data-test-subj="submit"
        fill={true}
        onClick={[Function]}
        size="s"
        type="submit"
      >
        Log In
      </EuiButton>
    </EuiFormRow>
  </EuiForm>
</EuiListGroup>
`;
